2008-12-22  Harsha Jagasia  <harsha.jagasia@amd.com>

PR tree-optimization/38510
	* gcc.dg/graphite/pr38510.c: New.
	* graphite.c (recompute_all_dominators): Call mark_irreducible_loops.
	  (translate_clast): Call recompute_all_dominators before 
	  graphite_verify.
	  (gloog): Call recompute_all_dominators before graphite_verify.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/graphite@142888 138bc75d-0d04-0410-961f-82ee72b054a4